<resources>
    <string name="app_name">Zen Flow</string>
    <string name="btnLogin">Login</string>
    <string name="txtInputPassword">Enter password</string>
    <string name="txtInputEmail">Enter e-mail</string>
    <string name="txtSignup">Sign up</string>
    <string name="txtResetPassword">Forgot Password?</string>
    <string name="txtRegister">Create Account</string>
    <string name="btnLogout">Logout</string>
    <string name="btnRecovery">Recovery Password</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imgDescription">User icon</string>
    <string name="txtProfile">Profile</string>
    <string name="btnAccount">Account Settings</string>
    <string name="txtReminder">Set Reminder</string>
    <string name="txtTitle">Good Morning</string>
    <string name="txtPoseL">Pose Library</string>
    <string name="txtFocus">Focus</string>
    <string name="btnSuggest">Suggest a feature</string>
    <string name="imgPose">Pose image</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="start_text">Please enter your details to sign in.</string>
    <string name="txtBenefits">Benefits:</string>
    <string name="txtDescription">Description:</string>
    <string name="title">Title</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="btnClose">Close</string>
    <string name="txtExercises">Exercises</string>
    <string name="btnStart">Start</string>
    <string name="txtTime">Time:</string>
    <string name="txtMinutes">minutes</string>
</resources>