<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    android:background="@color/green_light"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="234dp"
        android:layout_height="126dp"
        app:srcCompat="@drawable/yogaapp"
        android:layout_marginBottom="30dp"
        />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:paddingStart="15dp"
        android:paddingBottom="20dp"
        android:hint="@string/txtInputEmail"
        android:inputType="textWebEmailAddress"
        android:textAlignment="textStart"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtInputPassword"
        android:background="@color/green_light"
        android:textColorHint="@color/black"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:inputType="textPassword"
            android:background="@color/green_light"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            android:textStyle="bold"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/resetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="10dp"
        android:text="@string/txtResetPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/btnLogin"
        android:layout_marginTop="50dp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:textSize="17sp"
        android:background="@drawable/custom_buttom"/>

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background=""
        android:text="@string/txtSignup" />

</LinearLayout>