<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <ImageView
        android:id="@+id/imgUser"
        android:layout_width="136dp"
        android:layout_height="157dp"
        android:contentDescription="@string/imgDescription"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtProfile"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/imgUser"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="@+id/imgUser"
        app:layout_constraintTop_toBottomOf="@+id/imgUser" />

    <TextView
        android:id="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Hello World!"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtProfile" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/userEmail">

        <Button
            android:id="@+id/btnAccount"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_background_profile"
            android:drawableEnd="@drawable/ic_baseline_settings_24"
            android:drawablePadding="30dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/btnAccount"
            android:textAlignment="viewStart"
            android:textColor="#000000" />
        <Button
            android:id="@+id/btnReminder"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_background_profile"
            android:drawableEnd="@drawable/ic_baseline_notifications_none_24"
            android:drawablePadding="30dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:text="@string/txtReminder"
            android:textAlignment="viewStart"
            android:textColor="#000000" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_background_profile"
            android:drawableEnd="@drawable/ic_baseline_logout_24"
            android:drawablePadding="30dp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:text="@string/btnLogout"
            android:textAlignment="viewStart"
            android:textColor="#000000" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>