<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:ignore="SpeakableTextPresentCheck"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        tools:context=".Home">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:shadowColor="@color/green_one"
            android:shadowDx="2"
            android:shadowDy="0"
            android:shadowRadius="2"
            android:text="@string/txtTitle"
            android:textColor="@color/black"
            android:textSize="34sp" />

        <ImageButton
            android:id="@+id/imgBanner"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="15dp"
            android:scaleType="centerCrop"
            android:src="@drawable/yogalibrary" />

        <TextView
            android:id="@+id/txtPose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/txtPoseL"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Learn all the poses"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/btnPoseLibrary"
            android:layout_width="match_parent"
            android:layout_height="161dp"
            android:layout_marginTop="10dp"
            android:scaleType="fitXY"
            android:background="@android:color/darker_gray"
            android:src="@drawable/all_poses" />

        <TextView
            android:id="@+id/txtFocus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txtFocus"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/focusOne"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/ic_launcher_background" />

            <ImageButton
                android:id="@+id/focusTwo"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:src="@drawable/ic_launcher_background" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/focusThree"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:src="@drawable/ic_launcher_background" />

            <ImageButton
                android:id="@+id/focusFour"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:src="@drawable/ic_launcher_background" />

        </LinearLayout>

        <Button
            android:id="@+id/btnSugest"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button"
            android:text="@string/btnSuggest" />
    </LinearLayout>
</ScrollView>